--- a/expense-tracker-dashboard/package.json
+++ b/expense-tracker-dashboard/package.json
@@ -12,6 +12,7 @@
     "react-date-picker": "^11.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-paginate": "^8.2.0",
     "react-pro-sidebar": "^1.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
