--- a/expense-tracker-dashboard/package.json
+++ b/expense-tracker-dashboard/package.json
@@ -3,17 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mui/x-date-pickers": "^7.23.1",
     "cra-template": "1.2.0",
     "dayjs": "^1.11.13",
+    "expense-tracker-dashboard": "file:",
     "flatpickr": "^4.6.13",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-calendar-datetime-picker": "^1.7.4",
     "react-date-picker": "^11.0.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-paginate": "^8.2.0",
     "react-pro-sidebar": "^1.1.0",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
   },
