--- a/expense-tracker-dashboard/package.json
+++ b/expense-tracker-dashboard/package.json
@@ -11,9 +11,11 @@
     "react-calendar-datetime-picker": "^1.7.4",
     "react-date-picker": "^11.0.0",
     "react-dom": "^18.3.1",
+    "react-hooks": "^1.0.1",
     "react-icons": "^5.4.0",
     "react-paginate": "^8.2.0",
     "react-pro-sidebar": "^1.1.0",
+    "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
